[metadata]
name = ULSID
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Analyses, generates and extract student numbers of University of Limpopo(UL)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/ulsid
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/ulsid/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    extract 
    access 
    analyze 
    university-of-limpopo 
    student-number

[options]
package_dir =
    = source
packages = find:
install_requires =

python_requires = >=3.6

[options.packages.find]
where=source
